--- a/Capybara bewerken.css
+++ b/Capybara bewerken.css
@@ -50,7 +50,10 @@ font-family: sans-serif;
 
 
   .page-content a {
-   
+   color: #6f717d;
+   font-weight: bold;
+   text-decoration: none;
+  
   }
 
 h1 {
